fix spacing on home page

--- a/css/style.css
+++ b/css/style.css
@@ -367,12 +367,12 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .fh5co-section {
-  padding: 0 0 5em 0;
+  padding: 5em 0 5em 0;
 }
 
 @media screen and (max-width: 768px) {
   .fh5co-section {
-    padding: 0 0 3em 0;
+    padding: 3em 0 3em 0;
   }
 }
 
